@@ -447,5 +447,6 @@
 "Appended all albums to the play queue":"",
 "Application settings":"",
 "Color toolbars":"",
+"Darker":"",
 "Use chosen color for toolbars.":""
 }
