@@ -431,6 +431,7 @@
 "Application settings":"",
 "Audio":"",
 "Color toolbars":"",
+"Darker":"",
 "Disc %1":"",
 "E-Mail":"",
 "Firmware: %1":"",
