@@ -99,6 +99,7 @@
 "Ctrl+Shift+%1":"",
 "Current play queue":"",
 "Dark":"",
+"Darker":"",
 "Days":"",
 "Decrease volume":"",
 "Default player":"",
