@@ -447,5 +447,6 @@
 "1 day":"1 jour",
 "%1 days":"%1 jours",
 "Color toolbars":"",
+"Darker":"",
 "Use chosen color for toolbars.":""
 }
