@@ -325,6 +325,7 @@
 "Ctrl+%1":"",
 "Ctrl+Shift+%1":"",
 "Dark":"",
+"Darker":"",
 "Decrease volume":"",
 "Delete %1":"",
 "Description":"",
