@@ -444,6 +444,7 @@
 "Appended all albums to the play queue":"",
 "Application settings":"",
 "Color toolbars":"",
+"Darker":"",
 "No entries found":"",
 "Use chosen color for toolbars.":"",
 "⌘+%1":"",
